src/main/gen/de/achimonline/kickassembler/acbg/parser/KickAssemblerParser.java
// This is a generated file. Not intended for manual editing.
package de.achimonline.kickassembler.acbg.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static de.achimonline.kickassembler.acbg.psi.KickAssemblerTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class KickAssemblerParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return kickAssemblerFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_ALIGN expr
  public static boolean alignDirective(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "alignDirective")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_ALIGN);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, ALIGN_DIRECTIVE, result_);
    return result_;
  }

  /* ********************************************************** */
  // expr | HASH? expr | labelDef? HASH? expr
  public static boolean argument(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARGUMENT, "<argument>");
    result_ = expr(builder_, level_ + 1);
    if (!result_) result_ = argument_1(builder_, level_ + 1);
    if (!result_) result_ = argument_2(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // HASH? expr
  private static boolean argument_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = argument_1_0(builder_, level_ + 1);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // HASH?
  private static boolean argument_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_1_0")) return false;
    consumeToken(builder_, HASH);
    return true;
  }

  // labelDef? HASH? expr
  private static boolean argument_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = argument_2_0(builder_, level_ + 1);
    result_ = result_ && argument_2_1(builder_, level_ + 1);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // labelDef?
  private static boolean argument_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_2_0")) return false;
    labelDef(builder_, level_ + 1);
    return true;
  }

  // HASH?
  private static boolean argument_2_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "argument_2_1")) return false;
    consumeToken(builder_, HASH);
    return true;
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_ASSERT stringLiteral COMMA (block | expr) COMMA (block | expr)
  public static boolean assert_$(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assert_$")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_ASSERT);
    result_ = result_ && stringLiteral(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COMMA);
    result_ = result_ && assert_4(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COMMA);
    result_ = result_ && assert_6(builder_, level_ + 1);
    exit_section_(builder_, marker_, ASSERT, result_);
    return result_;
  }

  // block | expr
  private static boolean assert_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assert_4")) return false;
    boolean result_;
    result_ = block(builder_, level_ + 1);
    if (!result_) result_ = expr(builder_, level_ + 1);
    return result_;
  }

  // block | expr
  private static boolean assert_6(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assert_6")) return false;
    boolean result_;
    result_ = block(builder_, level_ + 1);
    if (!result_) result_ = expr(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // NUMBER | BOOLEAN | NULL | CHAR | ESCAPE_CHAR| stringLiteral
  public static boolean basicValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "basicValue")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BASIC_VALUE, "<basic value>");
    result_ = consumeToken(builder_, NUMBER);
    if (!result_) result_ = consumeToken(builder_, BOOLEAN);
    if (!result_) result_ = consumeToken(builder_, NULL);
    if (!result_) result_ = consumeToken(builder_, CHAR);
    if (!result_) result_ = consumeToken(builder_, ESCAPE_CHAR);
    if (!result_) result_ = stringLiteral(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // LEFT_BRACE
  //     (statement | macroDefinition | functionDefinition | preprocessorDirective | pseudoCommandDef)*
  //     RIGHT_BRACE
  public static boolean block(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block")) return false;
    if (!nextTokenIs(builder_, LEFT_BRACE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFT_BRACE);
    result_ = result_ && block_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_BRACE);
    exit_section_(builder_, marker_, BLOCK, result_);
    return result_;
  }

  // (statement | macroDefinition | functionDefinition | preprocessorDirective | pseudoCommandDef)*
  private static boolean block_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!block_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "block_1", pos_)) break;
    }
    return true;
  }

  // statement | macroDefinition | functionDefinition | preprocessorDirective | pseudoCommandDef
  private static boolean block_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "block_1_0")) return false;
    boolean result_;
    result_ = statement(builder_, level_ + 1);
    if (!result_) result_ = macroDefinition(builder_, level_ + 1);
    if (!result_) result_ = functionDefinition(builder_, level_ + 1);
    if (!result_) result_ = preprocessorDirective(builder_, level_ + 1);
    if (!result_) result_ = pseudoCommandDef(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // ( LEFT_PAREN expr RIGHT_PAREN ) | ( LEFT_BRACKET expr RIGHT_BRACKET )
  public static boolean bracketed(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bracketed")) return false;
    if (!nextTokenIs(builder_, "<bracketed>", LEFT_BRACKET, LEFT_PAREN)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, BRACKETED, "<bracketed>");
    result_ = bracketed_0(builder_, level_ + 1);
    if (!result_) result_ = bracketed_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // LEFT_PAREN expr RIGHT_PAREN
  private static boolean bracketed_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bracketed_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFT_PAREN);
    result_ = result_ && expr(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_PAREN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // LEFT_BRACKET expr RIGHT_BRACKET
  private static boolean bracketed_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "bracketed_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFT_BRACKET);
    result_ = result_ && expr(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_BRACKET);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_BREAK STRING?
  public static boolean breakDirective(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "breakDirective")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_BREAK);
    result_ = result_ && breakDirective_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, BREAK_DIRECTIVE, result_);
    return result_;
  }

  // STRING?
  private static boolean breakDirective_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "breakDirective_2")) return false;
    consumeToken(builder_, STRING);
    return true;
  }

  /* ********************************************************** */
  // ( [COLON] ( scopedLabel | BASIC_UPSTART ) ) | DIRECTIVE_BUILTIN
  static boolean callable(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "callable")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = callable_0(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, DIRECTIVE_BUILTIN);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [COLON] ( scopedLabel | BASIC_UPSTART )
  private static boolean callable_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "callable_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = callable_0_0(builder_, level_ + 1);
    result_ = result_ && callable_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // [COLON]
  private static boolean callable_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "callable_0_0")) return false;
    consumeToken(builder_, COLON);
    return true;
  }

  // scopedLabel | BASIC_UPSTART
  private static boolean callable_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "callable_0_1")) return false;
    boolean result_;
    result_ = scopedLabel(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, BASIC_UPSTART);
    return result_;
  }

  /* ********************************************************** */
  // statement | preprocessorDirective | block
  static boolean compound(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "compound")) return false;
    boolean result_;
    result_ = statement(builder_, level_ + 1);
    if (!result_) result_ = preprocessorDirective(builder_, level_ + 1);
    if (!result_) result_ = block(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_CPU ( "_6502NoIllegals" | "_6502" | "dtv" | "_65c02")
  public static boolean cpuDirective(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cpuDirective")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_CPU);
    result_ = result_ && cpuDirective_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, CPU_DIRECTIVE, result_);
    return result_;
  }

  // "_6502NoIllegals" | "_6502" | "dtv" | "_65c02"
  private static boolean cpuDirective_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cpuDirective_2")) return false;
    boolean result_;
    result_ = consumeToken(builder_, "_6502NoIllegals");
    if (!result_) result_ = consumeToken(builder_, "_6502");
    if (!result_) result_ = consumeToken(builder_, "dtv");
    if (!result_) result_ = consumeToken(builder_, "_65c02");
    return result_;
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_DATA exprs (COMMA LEFT_BRACKET expr (COMMA exprs)* RIGHT_BRACKET)?
  public static boolean dataDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataDefinition")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_DATA);
    result_ = result_ && exprs(builder_, level_ + 1);
    result_ = result_ && dataDefinition_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, DATA_DEFINITION, result_);
    return result_;
  }

  // (COMMA LEFT_BRACKET expr (COMMA exprs)* RIGHT_BRACKET)?
  private static boolean dataDefinition_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataDefinition_3")) return false;
    dataDefinition_3_0(builder_, level_ + 1);
    return true;
  }

  // COMMA LEFT_BRACKET expr (COMMA exprs)* RIGHT_BRACKET
  private static boolean dataDefinition_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataDefinition_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, COMMA, LEFT_BRACKET);
    result_ = result_ && expr(builder_, level_ + 1);
    result_ = result_ && dataDefinition_3_0_3(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_BRACKET);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (COMMA exprs)*
  private static boolean dataDefinition_3_0_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataDefinition_3_0_3")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!dataDefinition_3_0_3_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "dataDefinition_3_0_3", pos_)) break;
    }
    return true;
  }

  // COMMA exprs
  private static boolean dataDefinition_3_0_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dataDefinition_3_0_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && exprs(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // DIRECTIVE_DEF AT? LABEL ASSIGN expr
  static boolean defExpr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defExpr")) return false;
    if (!nextTokenIs(builder_, DIRECTIVE_DEF)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, DIRECTIVE_DEF);
    result_ = result_ && defExpr_1(builder_, level_ + 1);
    result_ = result_ && consumeTokens(builder_, 0, LABEL, ASSIGN);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // AT?
  private static boolean defExpr_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defExpr_1")) return false;
    consumeToken(builder_, AT);
    return true;
  }

  /* ********************************************************** */
  // exprMaybeDef ( COMMA exprMaybeDef )*
  public static boolean defExprList(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defExprList")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, DEF_EXPR_LIST, "<def expr list>");
    result_ = exprMaybeDef(builder_, level_ + 1);
    result_ = result_ && defExprList_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // ( COMMA exprMaybeDef )*
  private static boolean defExprList_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defExprList_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!defExprList_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "defExprList_1", pos_)) break;
    }
    return true;
  }

  // COMMA exprMaybeDef
  private static boolean defExprList_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defExprList_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && exprMaybeDef(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_DEFINE LABEL ( COMMA LABEL)* block
  public static boolean defineDirective(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defineDirective")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_DEFINE, LABEL);
    result_ = result_ && defineDirective_3(builder_, level_ + 1);
    result_ = result_ && block(builder_, level_ + 1);
    exit_section_(builder_, marker_, DEFINE_DIRECTIVE, result_);
    return result_;
  }

  // ( COMMA LABEL)*
  private static boolean defineDirective_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defineDirective_3")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!defineDirective_3_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "defineDirective_3", pos_)) break;
    }
    return true;
  }

  // COMMA LABEL
  private static boolean defineDirective_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "defineDirective_3_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, COMMA, LABEL);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // cpuDirective |
  //     encodingDirective |
  //     breakDirective |
  //     watchDirective |
  //     alignDirective |
  //     paramDirective |
  //     diskDirective |
  //     enumDirective |
  //     defineDirective |
  //     filemodifyDirective |
  //     modifyDirective |
  //     namespaceDirective |
  //     segmentDirective |
  //     structDirective
  static boolean directive(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "directive")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    result_ = cpuDirective(builder_, level_ + 1);
    if (!result_) result_ = encodingDirective(builder_, level_ + 1);
    if (!result_) result_ = breakDirective(builder_, level_ + 1);
    if (!result_) result_ = watchDirective(builder_, level_ + 1);
    if (!result_) result_ = alignDirective(builder_, level_ + 1);
    if (!result_) result_ = paramDirective(builder_, level_ + 1);
    if (!result_) result_ = diskDirective(builder_, level_ + 1);
    if (!result_) result_ = enumDirective(builder_, level_ + 1);
    if (!result_) result_ = defineDirective(builder_, level_ + 1);
    if (!result_) result_ = filemodifyDirective(builder_, level_ + 1);
    if (!result_) result_ = modifyDirective(builder_, level_ + 1);
    if (!result_) result_ = namespaceDirective(builder_, level_ + 1);
    if (!result_) result_ = segmentDirective(builder_, level_ + 1);
    if (!result_) result_ = structDirective(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_DISK [LABEL] [parameterMap] LEFT_BRACE parameterMapList RIGHT_BRACE
  public static boolean diskDirective(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diskDirective")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_DISK);
    result_ = result_ && diskDirective_2(builder_, level_ + 1);
    result_ = result_ && diskDirective_3(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, LEFT_BRACE);
    result_ = result_ && parameterMapList(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHT_BRACE);
    exit_section_(builder_, marker_, DISK_DIRECTIVE, result_);
    return result_;
  }

  // [LABEL]
  private static boolean diskDirective_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diskDirective_2")) return false;
    consumeToken(builder_, LABEL);
    return true;
  }

  // [parameterMap]
  private static boolean diskDirective_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "diskDirective_3")) return false;
    parameterMap(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // DOT DIRECTIVE_IMPORT (
  //     "source" STRING |
  //     ("binary"|"c64"|"text") STRING [ COMMA expr [ COMMA expr ]]
  // )
  static boolean dotImport(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dotImport")) return false;
    if (!nextTokenIs(builder_, DOT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeTokens(builder_, 0, DOT, DIRECTIVE_IMPORT);
    result_ = result_ && dotImport_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // "source" STRING |
  //     ("binary"|"c64"|"text") STRING [ COMMA expr [ COMMA expr ]]
  private static boolean dotImport_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dotImport_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = dotImport_2_0(builder_, level_ + 1);
    if (!result_) result_ = dotImport_2_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // "source" STRING
  private static boolean dotImport_2_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "dotImport_2_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "source");
    result_ = result_ && consumeToken(builder_, STRING);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }
